# pytk-shogi-replayer

./: LICENSE  MANIFEST.in  README.md  ki2.py  kif.py  main.py  mobakif.py  peg.py  psn.py  replayer.py  setup.cfg  sfen.py  shogi.py  theme-standard.json  theme-terminal.json  theme-western.json  theming.py  tkui.py  usikif.py
shogitk/: csa.py  ki2.py  kif.py  main.py  mobakif.py  psn.py  replayer.py  sfen.py  shogi.py  theme-standard.json  theme-terminal.json  theme-western.json  tkui.py  usikif.py
