[metadata]
name = pytk-shogi-replayer
version = attr:shogitk.__version__
author = Koji Hirono
author_email = koji.hirono@gmail.com
description = Shogi replayer
long_description = file:README.md
url = https://github.com/koji-hirono/pytk-shogi-replayer
license = MIT
license_file = LICENCE
classifier =
    Development Status :: 4 - Beta
    Programming Language :: Python
    Intended Audience :: End Users/Desktop
    Operating System :: POSIX
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Topic :: Utilities
    
[options]
zip_safe = False
include_package_data = True
packages = find:

[options.entry_points]
gui_scripts =
    pytk-shogi-replayer = shogitk.main:main

[wheel]
universal = 1
